# op3-webots

./: README.md
op3_webots_ros2/: .gitignore  CMakeLists.txt  README.md  package.xml
op3_webots_ros2/config/: OP3.robot  domain_bridge.yaml
op3_webots_ros2/include/op3_webots_ros2/: op3_extern_controller.hpp
op3_webots_ros2/launch/: op3_simulation.launch.py  robot.launch.py  robot_and_manager.launch.py  test_op3_walk.launch.py
op3_webots_ros2/protos/: RobocupSoccerField.proto  RobotisOp3.proto
op3_webots_ros2/resource/: op3.urdf  op3_pid_gain_default.yaml  ros2_control.yml
op3_webots_ros2/src/: extern_controller_main.cpp  op3_extern_controller.cpp  op3_manager.cpp  op3_player_state.cpp
op3_webots_ros2/worlds/: 3_op_robots.wbt  adult.wbt  field.wbt  op3_soccer.wbt  test_op3_walk.wbt
